# boilerplate-rs

./: Cargo.toml
src/: abstraction.rs  asserts.rs  error.rs  extend.rs  lib.rs  serde_datetime.rs  traits.rs
