[package]
name = "boilerplate-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0"
chrono = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional  = true }

[dev-dependencies]
serde_json = { version = "1" }
derive_more = { version = "0.99" }

[features]
default = [
  "all",
]

all = [
  "serde-datetime",
]

serde-datetime = [
  "dep:chrono",
  "dep:serde",
]
